# CoT-Monitoring

./: Causal_CoT_Report (1).md  Dataset.md  README.md  ablation.jsonl  causal.jsonl  dataset.ipynb  final_answers.csv  final_answers_clean.csv  highlight (1).py  main.py  plot_cot_causal.py  pyproject.toml  runs.jsonl  runs_cleaned.jsonl  runs_official.jsonl  tasks.todo  temp.txt
data/: problems.sample.json
notebooks/: ablation.py  causal.py
plots/ablations/: top_50_deltas_negative.csv  top_50_deltas_positive.csv
plots/step2step/: directionality_summary.csv
scripts/: build_problems.py
